--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
+# Ignore Jekyll build output
 _site/
+
+# Cache and metadata
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
-.DS_Store
+
+# Bundler / gems
 .bundle/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Optional editor files
+*.swp
+*.swo
+*.bak
